# epub2md

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: cli.rs  converter.rs  docx_markdown.rs  docx_reader.rs  epub_reader.rs  image.rs  main.rs  markdown.rs  metadata.rs  reader.rs
