[package]
name = "epub2md"
version = "0.1.0"
edition = "2021"
description = "Convert EPUB and DOCX documents to clean Markdown for LLM and agentic consumption"
license = "MIT"
keywords = ["epub", "docx", "markdown", "converter", "ebook"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
rbook = "0.6"
fast_html2md = "0.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
docx-rust = "0.1"
